zkay/examples/type_errors/ModifyFinalArgument.zkay
pragma zkay >=0.2.0;

contract ModifyFinalArgument {

	function f(final uint x) public {
		x = 10;
	}
}
